# IAD

IAD_1/: CMakeLists.txt  main.cpp
IAD_1/include/: Dane.h  DaneALL.h  DaneIS.h  DaneIV.h  DaneIVC.h  Proba.h
IAD_1/src/: Dane.cpp  DaneALL.cpp  DaneIS.cpp  DaneIV.cpp  DaneIVC.cpp  Proba.cpp
IAD_2/K-means/ZAD 2/: CMakeLists.txt  main.cpp
IAD_2/K-means/ZAD 2/include/: Abalone.h  Irys.h  KSrednich.h  Klaster.h  Punkt.h  Wino.h
IAD_2/K-means/ZAD 2/src/: Abalone.cpp  Irys.cpp  KSrednich.cpp  Klaster.cpp  Punkt.cpp  Wino.cpp
IAD_2/sprawozdanie/: sprawozdanie_IAD
IAD_2/szablon_sprawozdania/: sprawozdanie_wzor.tex
IAD_3/IAD_MLP/: Bias.cpp  Bias.h  CMakeLists.txt  Functions.cpp  Functions.h  InputLayer.h  InputNeuron.h  Klasyfikacja.h  Layer.cpp  Layer.h  Net.cpp  Net.h  Neuron.cpp  Neuron.h  ReadData.h  Service.h  Teach.h  gnuplot_i.hpp  main.cpp  main.py  result tables.txt
IAD_3/IAD_MLP/Testing/: Iris.py  Seeds.py  Task2.py
IAD_3/IAD_MLP/mlp/: NeuralNetwork.py
IAD_3/MLP/: pom.xml
IAD_3/MLP/data/: irys_learn.txt  irys_test.txt  network  seeds_learn.csv  seeds_learn.txt  seeds_test.csv  seeds_test.txt  tryb_nauki_bledy.txt  tryb_testowy_raport.txt
IAD_3/MLP/results/: RAPORT_NAUKA.txt  RAPORT_TEST.txt  net
IAD_3/MLP/src/main/java/: DataReader.java  Graph.java  Layer.java  Main.java  Net.java
IAD_zad2/MLP/: CMakeLists.txt  main.cpp
IAD_zad2/MLP/include/: Gnuplot.h  Layer.h  Perceptron.h  Space.h  gnuplot_i.hpp
IAD_zad2/MLP/src/: Layer.cpp  Perceptron.cpp  Space.cpp
